clusters/production/platform/vaultwarden/vaultwarden-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
