clusters/production/platform/vaultwarden/vaultwarden-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "vaultwarden"
